--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -14,32 +14,32 @@
     </header>
     <section id="galeria">
         <a href="img/1.png" target="_blank">
-            <img alt="Imagen 1" src="img/1.png">
+            <img alt="Imagen 1" src="img/1.png" title="Djinns">
         </a>
         <a href="img/2.jpg" target="_blank">
-            <img alt="Imagen 2" src="img/2.jpg">
+            <img alt="Imagen 2" src="img/2.jpg" title="Linebeck">
         </a>
-        <a href="img/3.gif" target="_blank">
+        <a href="img/3.gif" target="_blank" title="Krim">
             <img alt="Imagen 3" src="img/3.gif">
         </a>
         <br>
-        <a href="img/4.jpg" target="_blank">
+        <a href="img/4.jpg" target="_blank" title="Joseph Seed">
             <img alt="Imagen 4" src="img/4.jpg">
         </a>
-        <a href="img/5.jpg" target="_blank">
+        <a href="img/5.jpg" target="_blank" title="Golden Sun">
             <img alt="Imagen 5" src="img/5.jpg">
         </a>
-        <a href="img/6.jpg" target="_blank">
+        <a href="img/6.jpg" target="_blank" title="Ganondorf">
             <img alt="Imagen 6" src="img/6.jpg">
         </a>
         <br>
-        <a href="img/img7.jpg" target="_blank">
-            <img alt="Imagen 7" src="img/7.jpg">
+        <a href="img/7.png" target="_blank" title="Vaati">
+            <img alt="Imagen 7" src="img/7.png">
         </a>
-        <a href="img/8.jpg" target="_blank">
+        <a href="img/8.jpg" target="_blank" title="Kirby">
             <img alt="Imagen 8" src="img/8.jpg">
         </a>
-        <a href="img/8.jpg" target="_blank">
+        <a href="img/9.jpg" target="_blank" title="Pokemon">
             <img alt="Imagen 9" src="img/9.jpg">
         </a>
         
