--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
 <body>
     <ul>
+        <li><a href="Elpais/index.html">El País</a></li>
         <li><a href="Galeria/index.html">Galería de imágenes</a></li>
     </ul>
 </body>
