Galería actualizada con flex
Galería actualizada con flex

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -9,38 +9,66 @@
     </head>
     <body>
             <header>
-        <h1>Mi galería</h1>
-        <h2>Productos</h2>
+        <h1>Isara</h1>
+        <h2>Tienda online</h2>
     </header>
     <section id="galeria">
-        <a href="img/1.png" target="_blank">
+        <div class="box">
+            <a href="img/1.png" target="_blank">
             <img alt="Imagen 1" src="img/1.png" title="Djinns">
-        </a>
-        <a href="img/2.jpg" target="_blank">
+            <h3>Golden Sun - Djinns</h3>
+            <p> 38mm Walnut Veneer wood charms</p>
+            </a>
+            </div>
+        <div class="box">
+            <a href="img/2.jpg" target="_blank">
             <img alt="Imagen 2" src="img/2.jpg" title="Linebeck">
-        </a>
-        <a href="img/3.gif" target="_blank" title="Krim">
+            <h3>TLoZ - Linebeck</h3>
+            <p>300 gr. paper A5 print</p>    
+        </a></div>
+        <div class="box">
+            <a href="img/3.gif" target="_blank" title="Krim">
             <img alt="Imagen 3" src="img/3.gif">
-        </a>
+            <h3>DnD OC - Krim</h3>
+            <p>300 gr. paper A5 print</p> 
+        </a></div>
         <br>
-        <a href="img/4.jpg" target="_blank" title="Joseph Seed">
+        <div class="box">
+            <a href="img/4.jpg" target="_blank" title="Joseph Seed">
             <img alt="Imagen 4" src="img/4.jpg">
-        </a>
-        <a href="img/5.jpg" target="_blank" title="Golden Sun">
+            <h3>Far Cry 5 - Joseph Seed</h3>
+            <p>300 gr. paper A5 print</p> 
+        </a></div>
+        <div class="box">
+            <a href="img/5.jpg" target="_blank" title="Golden Sun">
             <img alt="Imagen 5" src="img/5.jpg">
-        </a>
-        <a href="img/6.jpg" target="_blank" title="Ganondorf">
+            <h3>Golden Sun - Party</h3>
+            <p>300 gr. paper A5 print</p> 
+        </a></div>
+        <div class="box">
+            <a href="img/6.jpg" target="_blank" title="Ganondorf">
             <img alt="Imagen 6" src="img/6.jpg">
-        </a>
+            <h3>TLoZ - Ganondorf</h3>
+            <p>300 gr. paper A5 print</p> 
+        </a></div>
         <br>
-        <a href="img/7.png" target="_blank" title="Vaati">
+        <div class="box">
+            <a href="img/7.png" target="_blank" title="Vaati">
             <img alt="Imagen 7" src="img/7.png">
-        </a>
-        <a href="img/8.jpg" target="_blank" title="Kirby">
+            <h3>TLoZ - Vaati</h3>
+            <p>300 gr. paper A5 print</p> 
+        </a></div>
+        <div class="box">
+            <a href="img/8.jpg" target="_blank" title="Kirby">
             <img alt="Imagen 8" src="img/8.jpg">
-        </a>
-        <a href="img/9.jpg" target="_blank" title="Pokemon">
+            <h3>Kirby - Food set</h3>
+            <p> Vinyl sticker set</p>
+        </a></div>
+        <div class="box">
+            <a href="img/9.jpg" target="_blank" title="Pokemon">
             <img alt="Imagen 9" src="img/9.jpg">
+            <h3>Pokémon - Bug set</h3>
+            <p> Vinyl sticker set</p>
         </a>
         
     </section>
