Actualizada galeria con flex

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <ul>
         <li><a href="Elpais/index.html">El País</a></li>
-        <li><a href="Galeria/index.html">Galería de imágenes</a></li>
+        <li><a href="GaleriaImagenes/index.html">Galería de imágenes</a></li>
     </ul>
 </body>
     
