Actualización Navegador y Overlay

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <ul>
         <li><a href="Elpais/index.html">El País</a></li>
         <li><a href="GaleriaImagenes/index.html">Galería de imágenes</a></li>
+        <li><a href="GaleriaImagenesOverlay/index.html">Galería de imágenes con overlay</a></li>
+        <li><a href="NikeDigital/index.html">Nike Digital</a></li>
     </ul>
 </body>
     
