--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="GaleriaImagenesOverlay/index.html">Galería de imágenes con overlay</a></li>
         <li><a href="NikeDigital/index.html">Nike Digital</a></li>
         <li><a href="Adobe/index.html">Adobe</a></li>
+        <li><a href="CastingTipografico/index.html">Casting Tipográfico</a></li>
     </ul>
 </body>
     
