--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="Adobe/index.html">Adobe</a></li>
         <li><a href="CastingTipografico/index.html">Casting Tipográfico</a></li>
         <li><a href="Responsive/index.html">Página responsive</a></li>
+        <li><a href="SupuestosBootstrap/index.html">Supuestos maquetación bootstrap</a></li>
     </ul>
 </body>
     
