--- a/SupuestosBootstrap/index.html
+++ b/SupuestosBootstrap/index.html
@@ -11,12 +11,12 @@
     
 <body>
     <ul>
-        <li><a href="Primer%2520ejemplo/index.html">Primer ejemplo</a></li>
-        <li><a href="Segundo%2520ejemplo/index.html">Segundo ejemplo</a></li>
-        <li><a href="Tercer%2520ejemplo/index.html">Tercer ejemplo</a></li>
-        <li><a href="Cuarto%2520ejemplo/index.html">Cuarto ejemplo</a></li>
-        <li><a href="Quinto%2520ejemplo/index.html">Quinto ejemplo</a></li>
-        <li><a href="Sexto%2520ejemplo/index.html">Sexto ejemplo</a></li>
+        <li><a href="Primerejemplo/index.html">Primer ejemplo</a></li>
+        <li><a href="Segundoejemplo/index.html">Segundo ejemplo</a></li>
+        <li><a href="Tercerejemplo/index.html">Tercer ejemplo</a></li>
+        <li><a href="Cuartoejemplo/index.html">Cuarto ejemplo</a></li>
+        <li><a href="Quintoejemplo/index.html">Quinto ejemplo</a></li>
+        <li><a href="Sextoejemplo/index.html">Sexto ejemplo</a></li>
     </ul>
 </body>
     
