--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="CastingTipografico/index.html">Casting Tipográfico</a></li>
         <li><a href="Responsive/index.html">Página responsive</a></li>
         <li><a href="SupuestosBootstrap/index.html">Supuestos maquetación bootstrap</a></li>
+        <li><a href="ResponsiveBootstrap/index.html">Página responsive con bootstrap</a></li>
     </ul>
 </body>
     
