--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li><a href="Responsive/index.html">Página responsive</a></li>
         <li><a href="SupuestosBootstrap/index.html">Supuestos maquetación bootstrap</a></li>
         <li><a href="ResponsiveBootstrap/index.html">Página responsive con bootstrap</a></li>
+        <li><a href="Evernote/index.html">Evernote</a></li>
+        <li><a href="NikeDigitalBootstrap/index.html">Nike Digital Bootstrap</a></li>
     </ul>
 </body>
     
