--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="ResponsiveBootstrap/index.html">Página responsive con bootstrap</a></li>
         <li><a href="Evernote/index.html">Evernote</a></li>
         <li><a href="NikeDigitalBootstrap/index.html">Nike Digital Bootstrap</a></li>
+        <li><a href="GaleriaCookiesAnimacion/index.html">Galeria con cookies, animación y mapa</a></li>
     </ul>
 </body>
     
